<resources>
    <string name="app_name">TriviaGame</string>
    <string name="score_string">You scored %1$d out of %2$d</string>
    <string name="result">Result</string>
    <string name="congratulations">Congratulations!</string>
    <string name="username">Username</string>
    <string name="your_score_is">Your score is ...</string>
    <string name="play_again">Play Again</string>
    <string name="api_error">Could not load questions. Please try again later</string>
    <string name="submit">Submit</string>
    <string name="oblique">/</string>
    <string name="finish">Finish</string>
    <string name="next">Next question</string>
    <string name="loading_questions">Loading questions...</string>
    <string name="_0_0">0/0</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="easy">Easy</string>
    <string name="empty_error">This field can not be blank</string>
    <string name="choose_your_quiz">Choose Your Quiz!</string>
    <string name="number_of_questions">Number of Questions:</string>
    <string name="pick_a_category">Pick a Category</string>
    <string name="pick_a_difficulty">Pick a difficulty</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="enter_name">Please enter your name</string>
    <string name="trivia_game">Trivia Game</string>
    <string name="welcome">Welcome!</string>
    <string-array name="categories_array">
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals and Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science and Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime and Manga</item>
        <item>Entertainment: Cartoon and Animations</item>
    </string-array>

    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>