<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/ivTrophy"
        android:layout_width="319dp"
        android:layout_height="302dp"
        android:src="@drawable/trophy" />

    <TextView
        android:id="@+id/tvCongratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/congratulations"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_score_is"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/play_again"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:textSize="18sp"/>


</LinearLayout>