<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".InputActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_your_quiz"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:fontFamily="cursive"
        android:textSize="40sp"
        android:textStyle="bold|italic"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_questions"
                    android:textColor="#7A8089"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/etNumQuestions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:inputType="number"
                    android:text="10" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_a_category"
                android:textColor="#7A8089"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/spinnerCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_a_difficulty"
                android:textColor="#7A8089"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/spinnerDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>


            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/primary"
                android:textColor="@color/white"
                android:text="@string/start_quiz"
                android:textSize="18sp">

            </Button>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>